// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clueMap rendering 1`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        baz BOOM foo BAM 
        <span
          class="emotion-0"
          role="button"
          tabindex="0"
        >
           not! 
        </span>
         fooey
      </span>
       with 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 2`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

.emotion-1 {
  border-bottom: 1px dotted;
  white-space: nowrap;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        baz BOOM foo 
        <span
          class="emotion-1"
        >
          BAM
        </span>
         
        <span
          class="emotion-0"
          role="button"
          tabindex="0"
        >
           not! 
        </span>
         fooey
      </span>
       with 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 3`] = `
.emotion-0 {
  border-bottom: 1px dotted;
  white-space: nowrap;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      <span
        class="emotion-0"
      >
        12ACLUE1
      </span>
       
      <span
        class="emotion-0"
      >
        BAM
      </span>
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 4`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

.emotion-1 {
  border-bottom: 1px dotted;
  white-space: nowrap;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        <span
          class="emotion-1"
        >
          BAM
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 5`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

.emotion-1 {
  border-bottom: 1px dotted;
  white-space: nowrap;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      You got it!! Glad the clues pointed you in the right direction. That's what they're there for. Also, it was Brian's suggestion to include 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
         
        <span
          class="emotion-1"
        >
          BAM
        </span>
         
      </span>
       which I think is such an awesome addition. Cheers!
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 6`] = `
.emotion-0 {
  border-bottom: 1px dotted;
  white-space: nowrap;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      Reference 
      <span
        class="emotion-0"
      >
        1A
      </span>
       and 
      <span
        class="emotion-0"
      >
        2-D
      </span>
       and 
      <span
        class="emotion-0"
      >
        1-Across
      </span>
       and 
      <span
        class="emotion-0"
      >
        2Down
      </span>
       and unknown 
      11A
    </div>
  </div>
</div>
`;

exports[`clueMap rendering 7`] = `
.emotion-0 {
  border-bottom: 1px dotted;
  white-space: nowrap;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      Reference 
      <span
        class="emotion-0"
      >
        1A
      </span>
      /
      <span
        class="emotion-0"
      >
        2D
      </span>
      /
      11A
    </div>
  </div>
</div>
`;

exports[`images should not be allowed 1`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      !
      <a
        href="http://example.com/test.png"
        rel="nofollow ugc noopener noreferrer"
        target="_blank"
      />
    </div>
  </div>
</div>
`;

exports[`images should not be allowed 2`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      ![aaalt][1]\\n\\n[1]: 
      <a
        href="http://example.com/test.gif%5Cn%5Cn"
        rel="nofollow ugc noopener noreferrer"
        target="_blank"
      >
        http://example.com/test.gif\\n\\n
      </a>
    </div>
  </div>
</div>
`;

exports[`markdown preview mode 1`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      foo bar &gt;!baz
    </div>
  </div>
</div>
`;

exports[`markdown preview mode 2`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tellus ante, dictum feugiat luctus quis, gravida id nibh. Sed tortor sem, pulvinar ut lacus nec, ornare consectetur ligula. Nam suscipit posuere vulputate. Proin ultricies dictum viverra. Cras tincidunt nec nulla non convallis. Nullam eget arcu mattis sapien ultricies varius nec ac mi. Duis dictum justo est, id tempus mi vestibulum eget. Nam posuere, nibh quis pharetra condimentum, leo ante tempor nibh, vitae facilisis sem elit at tellus. Etiam in tellus sagittis, lacinia enim ut, maximus ipsum. Ut sit amet mi tellus. Nulla a aliquam quam, vitae ultricies metus.
    </div>
    

    <div
      class="paragraph"
    >
      Mauris elit metus, scelerisque in sollicitudin et, bibendum in nulla. Praesent ex sem, tempus quis diam id, lobortis tempor ante. Ut sit amet bibendum purus. Vestibulum vulputate commodo faucibus. Donec dictum id ex eu mattis. Praesent id neque quis purus varius scelerisque. Cras hendrerit metus sed faucibus vestibulum. Ut in elementum mauris. Aenean faucibus…
    </div>
  </div>
</div>
`;

exports[`markdown preview mode 3`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        Lorem 
        <strong>
          ipsum
        </strong>
         dolor sit amet, consectetur 
        <em>
          adipiscing
        </em>
         elit. Phasellus tellus ante, dictum feugiat…
      </span>
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 1`] = `
<div>
  <div>
    <div
      class="paragraph"
    >
      foo bar &gt;!baz
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 2`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      foo bar 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        baz
      </span>
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 3`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        baz foo bam ! &gt;&gt; fooey
      </span>
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 4`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        baz foo bam ! &gt;&gt; fooey
      </span>
       with after text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 5`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        baz foo bam &gt;! fooey
      </span>
       with after text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 6`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        baz foo bam || fooey
      </span>
       with after text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 7`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        baz foo bam || fooey
      </span>
       with 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 8`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      before 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        baz foo bam 
        <span
          class="emotion-0"
          role="button"
          tabindex="0"
        >
           not! 
        </span>
         fooey
      </span>
       with 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 9`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      before ||baz foo bam
    </div>
    

    <div
      class="paragraph"
    >
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
         not! 
      </span>
       fooey|| with 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;

exports[`spoiler text rendering 10`] = `
.emotion-0 {
  background-color: var(--text);
  color: rgba(0,0,0,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 * {
  visibility: hidden;
}

<div>
  <div>
    <div
      class="paragraph"
    >
      before baz foo bam
    </div>
    

    <div
      class="paragraph"
    >
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
         not! 
      </span>
       fooey|| with 
      <span
        class="emotion-0"
        role="button"
        tabindex="0"
      >
        after
      </span>
       text
    </div>
  </div>
</div>
`;
